# Asura

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.prod  LICENSE  README.md  SECURITY.md  app.py  app_config.py  clear_data.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  stop.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/: __init__.py  factory.py
agents/qa_agents/: __init__.py  factory.py  model_selector.py
config/: OAI_CONFIG_LIST.example  __init__.py  config.py
database/: __init__.py  add_test_analysis_field.py  add_test_analyst_messages_field.py  init_db.py  migrate.py  migrate_conversation_fields.py  models.py  task_manager.py  upgrade_db.py
database/fixtures/: sample_social_post_interaction_v1.json
docker/: entrypoint.sh
docs/: DEPLOYMENT.md  USER_MANUAL.md
nginx/: nginx.conf
routes/: chat_sessions.py  confirmation.py  files.py  generation.py  image_pipeline.py  prd.py  requirement_modules.py  settings.py  tasks.py  tasks_unified.py  testcases.py
scripts/: quick-start.sh  test_image_integration_prd.py
services/: __init__.py
static/: aicase-theme.css  chat_session.css  chat_session.js  dashboard.css  dashboard.js  modern-element-theme.css  requirement_module.css  requirement_module.js  task_card.js  task_manager.css  task_manager.js  text_prd_manager.css  text_prd_manager.js  vue_client_improved.css  vue_client_improved.js
templates/: vue_client_improved.html
utils/: __init__.py  exceptions.py  response.py  security.py  task_check.py  task_identity.py  validators.py
(+177 files in other folders)
